# data-unlearning-bench

./: .gitignore  .gitmodules  README.md  exploring.py  extra_installs.txt  launchlite.sh  lite_gpt.py  lite_saving_data.py  pyproject.toml  requirements.txt  sample_docs.md
config/: ascent.yml
configs/: ascent_descent_example.yml
data/: cached_fineweb10B.py  get-living17.py
data-unlearning/: config.py  datasets.py  launching.py  paths.py  run.py
example_configs/: oracle_matching_example_config.yaml
forget_set_indices/CIFAR10/: forget_set_1.npy  forget_set_10.npy  forget_set_2.npy  forget_set_3.npy  forget_set_4.npy  forget_set_5.npy  forget_set_6.npy  forget_set_7.npy  forget_set_8.npy  forget_set_9.npy
forget_set_indices/LIVING17/: forget_set_1.npy  forget_set_2.npy  forget_set_3.npy  forget_set_4.npy  forget_set_5.npy
forget_set_indices/QNLI/: forget_set_1.npy  forget_set_2.npy  forget_set_3.npy  forget_set_4.npy
logs/: 0e7c9660-7014-4267-b5f7-fc4ebf0625cc.txt  917fb145-8a82-4042-bea0-766a99e0252a.txt  92843609-1733-4937-92f9-739458f69472.txt  b00e0c1e-c27b-4750-8b1b-3a5de3649bdb.txt  dd318eda-c96c-4b1d-bff9-cc84d481b1bf.txt
modded-nanogpt/: .gitignore  data_stuff.ipynb  train_gpt.py
notebooks/: klom_computation.ipynb
precomputing/: exploring.py  forget_sets.ipynb  lite_saving_data.py  make_ulira_forget_masks.ipynb  oracles_and_full_models.ipynb  train_cifar_oracles.py  train_cifar_oracles.slrm
slurm_files/: launch_oracles_loss_1pt.slurm  launch_oracles_loss_5pt.slurm  launch_oracles_random_1pt.slurm  launch_oracles_random_5pt.slurm  launch_pretrain.slurm
src/: config.py  datasets.py  do_nothing_living17_fs1.sh  eval.py  feature_list.txt  klom_results.csv  klom_results_supplementary.csv  launch_ascent.sh  launch_jobs.sh  launch_living17_ascent.sh  launching.py  living17_jobs.sh  minimal_test.py  models.py  paths.py  plots_data_processing.py  run.py  test_early_oracles.py  test_klom_sensitivity_N.py  test_resnet18_living17.py  test_shapes.py  unlearning.py  viz.ipynb
unlearning/: __init__.py
unlearning/auditors/: accuracies.py  basic.py  direct.py  eval_suite.py  logit_plots.py  margin_distributions_over_time.py  utils.py
unlearning/datasets/: __init__.py  cifar10.py  living17.py  tmp_train_living.py
unlearning/eval/: baselines_eval.py
unlearning/models/: resnet9.py
unlearning/training/: train.py  train_living.py  (+1 more)
unlearning_bench/: __init__.py  config.py  datasets.py  eval.py  launching.py  models.py  paths.py  run.py  train.py  train_living.py  train_living_forget_sets.slrm  unlearning.py
(+38 files in other folders)
