[tool.poetry]
name = "data-unlearning-bench"
version = "0.1.0"
description = ""
authors = [
    "Roy Rinberg <royrinberg@gmail.com>", 
    "Pol Puigdemont Plana <polpuigdemont@gmail.com>
    ]

packages = [
    {include = "unlearning_bench"},
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.6"
torch = "^2.7.1"
ipykernel = "^6.29.5"
matplotlib = "^3.10.3"
tqdm = "^4.67.1"
torchvision = "^0.22.1"
pandas = "^2.3.0"


[tool.poetry.group.dev.dependencies]
yapf = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
